# Cpp-game-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
assets/textures/: block_atlas.ppm
docs/: branching.md
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Math.cpp  VecMath.cpp  World.cpp  World.h  main.cpp
src/app/: Application.cpp  Application.h  main.cpp
src/core/: Math.cpp
src/engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h
src/game/: Camera.cpp  Camera.h
src/input/: FirstPersonController.cpp  FirstPersonController.h  InputState.h
src/math/: VecMath.cpp  VecMath.h
src/render/: Renderer.cpp  Renderer.h  TextureAtlas.cpp  TextureAtlas.h
src/world/: Chunk.cpp  Chunk.h  ChunkMesher.cpp  ChunkMesher.h  PerlinNoise.cpp  PerlinNoise.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h  WorldRenderApi.h
